# itba_crypto_tp_2018_Q1

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
in/: a2.txt
steg/: steg.cpp  steg.h
steg/aes/: aes_steg.cpp  aes_steg.h
steg/des/: steg_des.cpp  steg_des.h
steg/plain/: plain_steg.cpp  plain_steg.h
